[package]
name = "mib_parser"
version = "0.1.0"
authors = ["Andy Philpotts <andy@failfree.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
regex = "1.0"
pest = "2.0"
pest_derive = "2.0"
indextree = "4.0"


